mdapi/Custom/objects/Violation__c.object
<CustomObject>
    <fields>
        <fullName>Citing_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Citing Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Date__c</fullName>
        <label>Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Number__c</fullName>
        <label>Contact Name/Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Violations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remediation_Cost__c</fullName>
        <label>Remediation Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Delete_Violation</label>
    <nameField>
        <displayFormat>Violation-{0000000}</displayFormat>
        <label>Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>